--- a/package.json
+++ b/package.json
@@ -10,10 +10,32 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
+        "@babel/preset-react": "^7.0.0",
         "axios": "^0.19",
+        "bootstrap": "^4.0.0",
         "cross-env": "^7.0",
+        "jquery": "^3.2",
         "laravel-mix": "^5.0.1",
-        "lodash": "^4.17.19",
-        "resolve-url-loader": "^3.1.0"
+        "lodash": "^4.17.20",
+        "popper.js": "^1.12",
+        "react": "^16.14.0",
+        "react-dom": "^16.2.0",
+        "resolve-url-loader": "^3.1.0",
+        "sass": "^1.15.2",
+        "sass-loader": "^8.0.0"
+    },
+    "dependencies": {
+        "@emotion/core": "^10.1.1",
+        "@emotion/styled": "^10.0.3",
+        "@projectstorm/react-diagrams": "^6.0.1-beta.7",
+        "autoprefixer": "^10.0.2",
+        "closest": "0.0.1",
+        "dagre": "^0.8.5",
+        "ml-matrix": "^6.5.3",
+        "pathfinding": "^0.4.18",
+        "paths-js": "^0.4.11",
+        "postcss": "^8.1.9",
+        "resize-observer-polyfill": "^1.5.1",
+        "tailwindcss": "^2.0.1"
     }
 }
