--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
         "sass-loader": "^8.0.0"
     },
     "dependencies": {
+        "@babel/plugin-proposal-class-properties": "^7.12.1",
+        "@babel/plugin-proposal-decorators": "^7.12.1",
         "@emotion/core": "^10.1.1",
         "@emotion/styled": "^10.0.3",
         "@projectstorm/react-diagrams": "^6.0.1-beta.7",
@@ -32,6 +34,8 @@
         "closest": "0.0.1",
         "dagre": "^0.8.5",
         "ml-matrix": "^6.5.3",
+        "mobx": "^6.0.4",
+        "mobx-react": "^7.0.5",
         "pathfinding": "^0.4.18",
         "paths-js": "^0.4.11",
         "postcss": "^8.1.9",
