--- a/package.json
+++ b/package.json
@@ -36,9 +36,11 @@
         "ml-matrix": "^6.5.3",
         "mobx": "^6.0.4",
         "mobx-react": "^7.0.5",
+        "mousetrap": "^1.6.5",
         "pathfinding": "^0.4.18",
         "paths-js": "^0.4.11",
         "postcss": "^8.1.9",
+        "react-modal": "^3.12.1",
         "resize-observer-polyfill": "^1.5.1",
         "tailwindcss": "^2.0.1"
     }
