--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "paths-js": "^0.4.11",
         "postcss": "^8.1.9",
         "react-modal": "^3.12.1",
+        "react-toastify": "^6.2.0",
         "resize-observer-polyfill": "^1.5.1",
         "tailwindcss": "^2.0.1"
     }
