--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,7 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/",
-            "DataStory\\": "DataStory/",
+            "DataStory\\": "DataStory/src/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
         }
