--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
     ], 
     "require": {
         "php": "^7.3|^8.0",
+        "ajthinking/data-story": "@dev",
         "fideloper/proxy": "^4.4",
         "fruitcake/laravel-cors": "^2.0",
         "guzzlehttp/guzzle": "^7.0.1",
@@ -42,7 +43,6 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/",
-            "DataStory\\": "DataStory/src/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/"
         }
